# matura_informatyka

./: .gitignore  README.md  pyproject.toml
algorytmy/: alfabetyczne_sortowanie.py  algorytm_euklidesa.py  anagram.py  ciag_fibonacciego.py  liczby_doskonale.py  liczby_pierwsze.py  liczby_pierwsze_w_przedziale.py  miejsce_zerowe_funkcji.py  monte_carlo_pi.py  niesasiadujace_liczby.py  obliczanie_pol_obszarow_zamknietych.py  odwrotna_notacja_polska.py  palindrom.py  pierwiastek_kwadratowy.py  podciag.py  potegowanie.py  problem_plecakowy.py  programowanie_zachlanne.py  punkt_w_odcinku.py  punkt_wzgledem_prostej.py  rozklad_na_czynniki_pierwsze.py  schemat_hornera.py  sito_eratostenesa.py  sortowanie_babelkowe.py  sortowanie_przez_scalanie.py  sortowanie_przez_wstawianie.py  sortowanie_przez_zliczanie.py  sortowanie_szybkie.py  szyfr_cezara.py  warunki_trojkata.py  wyszukiwanie_binarne.py  wyszukiwanie_naiwne.py  wzorzec_w_tekscie.py
arkusz kalkulacyjny/cukier/: cukier.xlsx
arkusz kalkulacyjny/daty/: daty.xlsx
arkusz kalkulacyjny/filtrowanie/: filtrowanie.xlsx
arkusz kalkulacyjny/fotowoltaika/: fotowoltaika.xlsx
arkusz kalkulacyjny/nagrody/: nagrody.xlsx
arkusz kalkulacyjny/przestawna/: przestawna.xlsx
arkusz kalkulacyjny/symulacje/: data.txt  symulacje.xlsx
arkusz kalkulacyjny/wyszukaj pionowo/: wyszukaj_pionowo.xlsx
teoria/: pierwiastek_kwadratowy.md  schemat_hornera.md  szyfr_cezara.md
teoria/algorytmika/: algorytm_euklidesa.md  dziel_i_zwyciezaj.md  geometria_analityczna.md  iteracja_i_rekurencja.md  liczby_doskonale.md  liczby_pierwsze.md  podciag.md  (+12 more)
(+39 files in other folders)
