[tool.poetry]
name = "matura-informatyka"
version = "0.1.0"
description = ""
authors = ["pawelek3113 <pawel.kamil.komendera@gmail.com>"]
readme = "README.md"
packages = [{include = "matura_informatyka"}]

[tool.poetry.dependencies]
python = "^3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

